--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -23,7 +23,7 @@ Formatted, should contain everything needed for current analysis. Have not check
 library(pacman)
 p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,ggnewscale, sf, elevatr, patchwork, ggspatial, zoo, igraph, TSP, ggnetwork, knitr, #intergraph, ggpubr, #purrr, spatialEco, 
        hydroEvents,ggbreak,
-       maptools,
+       #maptools, # no current version
        rempsyc, # make nice table
        ggpubr, # some functions for graphing, central tendency
        ggbreak # function for axis break
@@ -6372,7 +6372,7 @@ mutate(model = fct_relevel(model, c("Proportion of Time Flowing",
                                 "BFS",
                                 "Event based sequence"
                                 )))
-
+p_unload(patchwork)
 
 ggplot() +
   # Full discharge line for background context
@@ -6409,11 +6409,11 @@ ggplot() +
     y = "Discharge (mm/day)",
     x = ""
   ) +
-  
-  scale_x_break(c(
-    ymd_hms("2023-11-12 00:00:00"),
-    ymd_hms("2024-05-20 00:00:00")
-  )) +
+  # This seems to not be compatible anymore?
+  # scale_x_break(
+  #   breaks = c(ymd_hms("2023-11-12 00:00:00"),
+  #   ymd_hms("2024-05-20 00:00:00"))
+  # ) #+
   
   scale_x_datetime(
     date_labels = "%b %Y",
